--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@maptiler/sdk": "^3.0.1",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.475.0",
     "node": "^23.8.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
